--- a/line-count.html
+++ b/line-count.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 	<title>Line Count Report</title>
 	<style type="text/css">
@@ -38,21 +39,18 @@
 			<th>Source</th>
 				<th>Comments</th>
 				<th>Trivial</th>
-				<th>Empty</th>
 				<th>Total</th>
 			</tr>
 			<tr>
 				<td>.eslintrc.json</td>
 				<td>33</td>
 				<td class="number">0</td>
-				<td class="number">11</td>
-				<td class="number">1</td>
+				<td class="number">12</td>
 				<td class="number">45</td>
 			</tr>
 			<tr>
 				<td>LICENSE.txt</td>
 				<td>0</td>
-				<td class="number">0</td>
 				<td class="number">0</td>
 				<td class="number">1</td>
 				<td class="number">1</td>
@@ -61,7 +59,6 @@
 				<td>README.md</td>
 				<td>2</td>
 				<td class="number">2</td>
-				<td class="number">0</td>
 				<td class="number">2</td>
 				<td class="number">6</td>
 			</tr>
@@ -69,64 +66,56 @@
 				<td>index.js</td>
 				<td>32</td>
 				<td class="number">3</td>
-				<td class="number">8</td>
-				<td class="number">12</td>
+				<td class="number">20</td>
 				<td class="number">55</td>
 			</tr>
 			<tr>
 				<td>leijona.json</td>
 				<td>29</td>
 				<td class="number">6</td>
-				<td class="number">7</td>
-				<td class="number">1</td>
+				<td class="number">8</td>
 				<td class="number">43</td>
 			</tr>
 			<tr>
 				<td>src/config-manager.js</td>
 				<td>25</td>
 				<td class="number">8</td>
-				<td class="number">20</td>
-				<td class="number">7</td>
+				<td class="number">27</td>
 				<td class="number">60</td>
 			</tr>
 			<tr>
 				<td>src/file-handler.js</td>
 				<td>36</td>
 				<td class="number">17</td>
-				<td class="number">24</td>
-				<td class="number">11</td>
+				<td class="number">35</td>
 				<td class="number">88</td>
 			</tr>
 			<tr>
 				<td>src/line-counter.js</td>
-				<td>47</td>
+				<td>49</td>
 				<td class="number">14</td>
-				<td class="number">23</td>
-				<td class="number">10</td>
-				<td class="number">94</td>
+				<td class="number">35</td>
+				<td class="number">98</td>
 			</tr>
 			<tr>
 				<td>src/output-generator.js</td>
 				<td>61</td>
 				<td class="number">35</td>
-				<td class="number">32</td>
-				<td class="number">24</td>
+				<td class="number">56</td>
 				<td class="number">152</td>
 			</tr>
 			<tr>
 				<td>src/string-manipulator.js</td>
 				<td>10</td>
 				<td class="number">11</td>
-				<td class="number">8</td>
-				<td class="number">4</td>
+				<td class="number">12</td>
 				<td class="number">33</td>
 			</tr>
 			<tr>
 				<td>tsconfig.json</td>
 				<td>10</td>
 				<td class="number">0</td>
-				<td class="number">5</td>
-				<td class="number">1</td>
+				<td class="number">6</td>
 				<td class="number">16</td>
 			</tr>
 </tbody></table></body></html>
