--- a/line-count.html
+++ b/line-count.html
@@ -43,79 +43,83 @@
 			</tr>
 			<tr>
 				<td>.eslintrc.json</td>
-				<td>33</td>
+				<td class="number">33</td>
 				<td class="number">0</td>
-				<td class="number">12</td>
-				<td class="number">45</td>
+				<td class="number">11</td>
+				<td class="number">44</td>
 			</tr>
 			<tr>
 				<td>LICENSE.txt</td>
-				<td>0</td>
 				<td class="number">0</td>
-				<td class="number">1</td>
-				<td class="number">1</td>
+				<td class="number">0</td>
+				<td class="number">0</td>
+				<td class="number">0</td>
 			</tr>
 			<tr>
 				<td>README.md</td>
-				<td>2</td>
 				<td class="number">2</td>
 				<td class="number">2</td>
-				<td class="number">6</td>
+				<td class="number">0</td>
+				<td class="number">4</td>
 			</tr>
 			<tr>
 				<td>index.js</td>
-				<td>32</td>
+				<td class="number">32</td>
 				<td class="number">3</td>
-				<td class="number">20</td>
-				<td class="number">55</td>
-			</tr>
-			<tr>
-				<td>leijona.json</td>
-				<td>29</td>
-				<td class="number">6</td>
 				<td class="number">8</td>
 				<td class="number">43</td>
 			</tr>
 			<tr>
+				<td>leijona.json</td>
+				<td class="number">29</td>
+				<td class="number">6</td>
+				<td class="number">7</td>
+				<td class="number">42</td>
+			</tr>
+			<tr>
 				<td>src/config-manager.js</td>
-				<td>25</td>
+				<td class="number">25</td>
 				<td class="number">8</td>
-				<td class="number">27</td>
-				<td class="number">60</td>
+				<td class="number">20</td>
+				<td class="number">53</td>
 			</tr>
 			<tr>
 				<td>src/file-handler.js</td>
-				<td>36</td>
+				<td class="number">36</td>
 				<td class="number">17</td>
-				<td class="number">35</td>
-				<td class="number">88</td>
+				<td class="number">24</td>
+				<td class="number">77</td>
 			</tr>
 			<tr>
 				<td>src/line-counter.js</td>
-				<td>49</td>
+				<td class="number">50</td>
 				<td class="number">14</td>
-				<td class="number">35</td>
-				<td class="number">98</td>
+				<td class="number">29</td>
+				<td class="number">93</td>
 			</tr>
 			<tr>
 				<td>src/output-generator.js</td>
-				<td>61</td>
-				<td class="number">35</td>
-				<td class="number">56</td>
-				<td class="number">152</td>
+				<td class="number">92</td>
+				<td class="number">44</td>
+				<td class="number">45</td>
+				<td class="number">181</td>
 			</tr>
 			<tr>
 				<td>src/string-manipulator.js</td>
-				<td>10</td>
+				<td class="number">10</td>
 				<td class="number">11</td>
-				<td class="number">12</td>
-				<td class="number">33</td>
+				<td class="number">8</td>
+				<td class="number">29</td>
 			</tr>
 			<tr>
 				<td>tsconfig.json</td>
-				<td>10</td>
+				<td class="number">10</td>
 				<td class="number">0</td>
-				<td class="number">6</td>
-				<td class="number">16</td>
+				<td class="number">5</td>
+				<td class="number">15</td>
 			</tr>
+<tr><td><strong>Totals</strong></td>				<td class="number">319</td>
+				<td class="number">105</td>
+				<td class="number">157</td>
+				<td class="number">581</td>
 </tbody></table></body></html>
