Leftover bugfixes from refactor

--- a/line-count.html
+++ b/line-count.html
@@ -91,6 +91,13 @@
 				<td class="number">77</td>
 			</tr>
 			<tr>
+				<td>src/generator/html-generator.js</td>
+				<td class="number">82</td>
+				<td class="number">40</td>
+				<td class="number">43</td>
+				<td class="number">165</td>
+			</tr>
+			<tr>
 				<td>src/line-counter.js</td>
 				<td class="number">50</td>
 				<td class="number">14</td>
@@ -99,10 +106,10 @@
 			</tr>
 			<tr>
 				<td>src/output-generator.js</td>
-				<td class="number">92</td>
-				<td class="number">44</td>
-				<td class="number">45</td>
-				<td class="number">181</td>
+				<td class="number">10</td>
+				<td class="number">9</td>
+				<td class="number">6</td>
+				<td class="number">25</td>
 			</tr>
 			<tr>
 				<td>src/string-manipulator.js</td>
@@ -112,14 +119,21 @@
 				<td class="number">29</td>
 			</tr>
 			<tr>
+				<td>src/templates/html-table-header.html</td>
+				<td class="number">28</td>
+				<td class="number">0</td>
+				<td class="number">6</td>
+				<td class="number">34</td>
+			</tr>
+			<tr>
 				<td>tsconfig.json</td>
 				<td class="number">10</td>
 				<td class="number">0</td>
 				<td class="number">5</td>
 				<td class="number">15</td>
 			</tr>
-<tr><td><strong>Totals</strong></td>				<td class="number">319</td>
-				<td class="number">105</td>
-				<td class="number">157</td>
-				<td class="number">581</td>
+<tr><td><strong>Totals</strong></td>				<td class="number">347</td>
+				<td class="number">110</td>
+				<td class="number">167</td>
+				<td class="number">624</td>
 </tbody></table></body></html>
